--- a/VisualizerUI/VisualizerUI.csproj
+++ b/VisualizerUI/VisualizerUI.csproj
@@ -13,6 +13,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="DotNetProjects.WpfToolkit.DataVisualization" Version="6.1.94" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\VisualizerLibrary\VisualizerLibrary.csproj" />
   </ItemGroup>
 
